--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.venti">
+    package="app.venti">
 
      <uses-permission android:name="android.permission.INTERNET"/>
      <uses-permission android:name="android.permission.VIBRATE"/>
@@ -10,7 +10,7 @@
 
    <application
         android:label="Venti"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher" >
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
