--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_local_notifications: 
   telephony: ^0.1.2
 
+  #Background task
+  workmanager:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
